--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@
 }
 
 #jumbo{
-
 margin-top: 70px;
 }
 #logoText{
@@ -58,6 +57,15 @@ margin-top: 70px;
   background-image: url("../image/gam1.jpg");
   background-repeat: no-repeat;
 
+}
+
+#panel2{
+  background-image: url("../image/gam2.jpg");
+  height: 300px;
+}
+#panel3{
+  background-image: url("../image/gam3.jpg");
+  height: 300px;
 }
 #tabText{
   color: #eee;
